--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
                     <div class="menu__item"><a href="#">Доставка</a></div>
                     <div class="menu__item"><a href="#contacts">Контакты</a></div>
                     <div class="menu__item"><a href="#information">Информация</a></div>
+                    <div class="menu__item"><a href="#reviews">Отзывы</a></div>
                 </div>
             </nav>
             <div class="header__text">
@@ -57,19 +58,22 @@
             </div>
         </div>
     </section>
-    <section class="reviews">
+    <section id="reviews" class="reviews">
         <div class="title title_center">Отзывы!</div>
         <div class="reviews__carousel">
             <div class="reviews__carousel__dots"></div>
             <div class="arrow-prev__wrapper"><img src="img/reviews/arrow.png" alt="arrow_prev" class="reviews__carousel__arrow-prev"></div>
             <div class="arrow-next__wrapper"><img src="img/reviews/arrow.png" alt="arrow_next" class="reviews__carousel__arrow-next"></div>
             <div class="reviews__carousel__container">
-                <img src="img/reviews/review.png" alt="review_inna" class="reviews__carousel__item">    
-                <img src="img/reviews/review2.png" alt="review_inna" class="reviews__carousel__item">
-                <img src="img/reviews/review3.png" alt="review_inna" class="reviews__carousel__item">
-                <img src="img/reviews/review.png" alt="review_inna" class="reviews__carousel__item">    
-                <img src="img/reviews/review2.png" alt="review_inna" class="reviews__carousel__item">
-                <img src="img/reviews/review3.png" alt="review_inna" class="reviews__carousel__item">
+                <img src="img/reviews/review.png" alt="innadragomirovaii_11" class="reviews__carousel__item">
+                <img src="img/reviews/review8.png" alt="lidia.kkuleshova" class="reviews__carousel__item">  
+                <img src="img/reviews/review2.png" alt="d.si_09" class="reviews__carousel__item">
+                <img src="img/reviews/review6.png" alt="_aksinya21" class="reviews__carousel__item">
+                <img src="img/reviews/review3.png" alt="ol_ia4545" class="reviews__carousel__item">
+                <img src="img/reviews/review4.png" alt="_.katya.__k_" class="reviews__carousel__item">    
+                <img src="img/reviews/review5.png" alt="arishaaaaa.1" class="reviews__carousel__item">
+                <img src="img/reviews/review7.png" alt="_panfufic_" class="reviews__carousel__item">
+                <img src="img/reviews/review9.png" alt="_l070899a_" class="reviews__carousel__item">
             </div>
         </div>
     </section>
@@ -77,8 +81,8 @@
         <div class="container">
             <div class="title title_center">Ассортимент!</div>
             <div class="assortment__menu">
-                <div class="assortment__menu__item">
-                    <span class="assortment__menu__circle"></span>
+                <div class="assortment__menu__item assortment__menu__item_active">
+                    <span class="assortment__menu__circle assortment__menu__circle_active"></span>
                     <div class="assortment__menu__text">Все</div>
                 </div>
                 <div class="assortment__menu__item">
@@ -142,7 +146,6 @@
                 <div class="staff__item">
                     <div class="staff__photos">
                         <img class="staff__photo staff__photo_active" src="img/staff/jeans_blue.jpg" alt="img">
-            
                         <!-- <img src="img/staff/kardigan.jpg" alt="img">
                         <img src="img/staff/kardigan.jpg" alt="img">
                         <img src="img/staff/jeans_blue.jpg" alt="img">
