--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>КОКОС ВОЛГОГРАД</title>
 </head>
 <body>
-    <header class="header header_bg-img1">
+    <header class="header">
         <div class="container">
             <nav class="menu">
                 <div class="menu__wrapper">
