--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <header class="header">
+        <div class="menu__burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="container">
             <nav class="menu">
                 <div class="menu__wrapper">
